--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="src/css/main.css">
     <link href="https://724614669468-parceiro.s3.amazonaws.com/93ea68847fe6a0f4b0c21d4f64f8b5eb/Nérus-e-doc-ICONE.png"
         rel="shortcut icon" type="image/x-icon">
 
@@ -15,14 +15,14 @@
 
 <body>
     <div class="container">
-
+ 
         <div id="header">
             <section id="nav-bar" class="welcome">
 
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="#">
-                            <img src="img/logo.png" class="img-fluid">
+                            <img src="src/img/logo.png" class="img-fluid">
                         </a>
                         <div class="hm-prod-select">
                             <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" checked
@@ -202,12 +202,12 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/cancelamento.js"></script>
-    <script src="js/insere-xml.js"></script>
-    <script src="js/menu.js"></script>
+    <script src="src/js/bootstrap.min.js"></script>
+    <script src="src/js/jquery.js"></script>
+    <script src="src/js/main.js"></script>
+    <script src="src/js/cancelamento.js"></script>
+    <script src="src/js/insere-xml.js"></script>
+    <script src="src/js/menu.js"></script>
 
 </body>
 
